@startuml

skinparam classAttributeIconSize 0
hide empty methods

class Owner {
    String address
    String city
    String firstName
    Integer id
    String lastName
    String telephone
}

class Pet {
    LocalDate birthDate
    Integer id
    String name
}

class PetType {
    Integer id
    String name
}

class Role {
    Integer id
    String name
}

class Specialty {
    Integer id
    String name
}

class User {
    Boolean enabled
    String password
    String username
}

class Vet {
    String firstName
    Integer id
    String lastName
}

class Visit {
    LocalDate date
    String description
    Integer id
}

Owner "1" *-- "N" Pet : pets
Pet --> PetType : type
Pet "1" *-- "N" Visit : visits
User "1" *-- "N" Role : roles
Vet "N" -- "N" Specialty : specialties

@enduml
